RESOLVED FIXED305012
REGRESSION (301306@main): Drag image location is incorrect when dragging images in non-remote subframes
https://bugs.webkit.org/show_bug.cgi?id=305012
Summary REGRESSION (301306@main): Drag image location is incorrect when dragging imag...
Wenson Hsieh
Reported 2026-01-06 14:50:34 PST
Attachments
Wenson Hsieh
Comment 1 2026-01-06 15:25:15 PST
EWS
Comment 2 2026-01-06 19:21:44 PST
Committed 305198@main (877e4daa3bc7): <https://commits.webkit.org/305198@main> Reviewed commits have been landed. Closing PR #56164 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.