Source/WebKit/UIProcess/WebPageProxy.cpp
@@ -13684,6 +13684,8 @@ void WebPageProxy::updateWebsitePolicies(const API::WebsitePolicies& policies)
 
 void WebPageProxy::convertPointToMainFrameCoordinates(WebCore::FloatPoint point, std::optional<WebCore::FrameIdentifier> frameID, CompletionHandler<void(std::optional<WebCore::FloatPoint>)>&& completionHandler)
 {
+    // FIXME: This method returns a point in main frame content coordinates when site isolation is disabled,
+    // but returns a point in root view coordinates when site isolation is enabled.
     RefPtr frame = WebFrameProxy::webFrame(frameID);
     if (!frame)
         return completionHandler(std::nullopt);
