Tools/TestWebKitAPI/Tests/mac/DragAndDropTestsMac.mm
@@ -243,4 +243,26 @@ TEST(DragAndDropTests, ProvideImageDataAsTypeIdentifiers)
     EXPECT_GT([uniquePasteboard dataForType:UTTypeGIF.identifier].length, 0u);
 }
 
+TEST(DragAndDropTests, DragLocationForImageInScrolledSubframe)
+{
+    RetainPtr configuration = adoptNS([WKWebViewConfiguration new]);
+    [configuration preferences]._largeImageAsyncDecodingEnabled = NO;
+
+    RetainPtr simulator = adoptNS([[DragAndDropSimulator alloc] initWithWebViewFrame:NSMakeRect(0, 0, 400, 400) configuration:configuration.get()]);
+    RetainPtr webView = [simulator webView];
+    [webView synchronouslyLoadTestPageNamed:@"image-in-scrolled-subframe"];
+
+    TestWebKitAPI::Util::waitForConditionWithLogging([&] -> bool {
+        return [webView stringByEvaluatingJavaScript:@"doneLoadingSubframe"].boolValue;
+    }, 3, @"Expected subframe to finish loading.");
+
+    [simulator runFrom:NSMakePoint(100, 100) to:NSMakePoint(200, 200)];
+
+    CGPoint dragLocation = [simulator initialDragImageLocationInView];
+    EXPECT_TRUE(NSPointInRect(dragLocation, [webView bounds]));
+
+    RetainPtr dragTypes = [[[simulator draggingInfo] draggingPasteboard] types];
+    EXPECT_TRUE([dragTypes containsObject:UTTypePNG.identifier]);
+}
+
 #endif // ENABLE(DRAG_SUPPORT) && PLATFORM(MAC)
